force-app/main/default/objects/Role_of_employee__c/Role_of_employee__c.object-meta.xml
<CustomObject>
    <description>This object contains one-to-one relationship with the Employee</description>
    <label>Role</label>
    <nameField>
        <label>Role of employee</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>