force-app/main/default/objects/Role_of_employee__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The field contain the briefing of the role</description>
    <inlineHelpText>description of role</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>