force-app/main/default/objects/Role_of_employee__c/fields/EMPLOYEE__c.field-meta.xml
<CustomField>
    <fullName>EMPLOYEE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EMPLOYEE</label>
    <referenceTo>EMPLOYEE__c</referenceTo>
    <relationshipLabel>Roles</relationshipLabel>
    <relationshipName>Roles1</relationshipName>
    <type>Lookup</type>
</CustomField>