force-app/main/default/objects/Role_of_employee__c/fields/EmpUniqueId__c.field-meta.xml
<CustomField>
    <fullName>EmpUniqueId__c</fullName>
    <label>EmpUniqueId</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>